# YouYube-downloader

./: Dockerfile  bot.py  cookies.txt  docker-compose.yml  main.py  pyproject.toml  settings.py  yt_downloader.py
config/: config.yml
utils/: url_extractor.py
